infra/cloudformation.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Mock OpenAI API + OpenWebUI on EC2

Parameters:
  KeyName:
    Type: String
    Description: EC2 Key Pair name for SSH access
    Default: ''

  AllowedIP:
    Type: String
    Description: IP CIDR allowed for SSH access
    Default: '0.0.0.0/0'

Mappings:
  RegionAMI:
    eu-west-1:
      AMI: ami-0e9085e60087ce171  # Ubuntu 24.04 LTS eu-west-1

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: mock-openai-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: mock-openai-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: mock-openai-subnet

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: mock-openai-rt

  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Mock OpenAI API security group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedIP
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: mock-openai-sg

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3a.small
      ImageId: !FindInMap [RegionAMI, !Ref 'AWS::Region', AMI]
      KeyName: !If [HasKeyName, !Ref KeyName, !Ref 'AWS::NoValue']
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref SecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: mock-openai-api

Conditions:
  HasKeyName: !Not [!Equals [!Ref KeyName, '']]

Outputs:
  PublicIP:
    Description: Public IP of EC2 instance
    Value: !GetAtt EC2Instance.PublicIp

  PublicDNS:
    Description: Public DNS of EC2 instance
    Value: !GetAtt EC2Instance.PublicDnsName

  MockAPIURL:
    Description: Mock OpenAI API URL
    Value: !Sub 'http://${EC2Instance.PublicIp}:8080'

  OpenWebUIURL:
    Description: OpenWebUI URL
    Value: !Sub 'http://${EC2Instance.PublicIp}'
